--- a/mydata/src/main/resources/application.properties
+++ b/mydata/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.devtools.restart.additional-paths= src/main/java
 #spring.devtools.restart.exclude= src/main/resources
 spring.thymeleaf.cache=false
 
+msg-config.swagger-open: true
