--- a/mydata/src/main/resources/application.properties
+++ b/mydata/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/mydata?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = anyanjun
+spring.datasource.password = 123
 
 server.port=9199
 mybatis.mapper-locations=classpath:mapper/*.xml
