--- a/mydata/pom.xml
+++ b/mydata/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <mybatis-plus.version>2.1.9</mybatis-plus.version>
     </properties>
 
     <dependencies>
@@ -95,6 +96,11 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
 
     </dependencies>
 
