--- a/mydata/pom.xml
+++ b/mydata/pom.xml
@@ -62,7 +62,10 @@
             <optional>true</optional>
             <scope>true</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
