--- a/mydata/src/main/resources/application.properties
+++ b/mydata/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.devtools.restart.additional-paths= src/main/java
 spring.thymeleaf.cache=false
 
 msg-config.swagger-open: true
+
+# 上传文件总的最大值
+spring.servlet.multipart.max-request-size=1000MB
+# 单个文件的最大值
+spring.servlet.multipart.max-file-size=1000MB
