--- a/mydata/src/main/resources/application.yml
+++ b/mydata/src/main/resources/application.yml
@@ -1,1 +1,13 @@
 name: 'hello\n ann'
+
+und:
+  name: ann
+  id: 2
+mm: 5
+
+spring:
+  rabbitmq:
+    host: localhost
+    port: 15672
+    username: ann
+    password: ann
