--- a/mydata/pom.xml
+++ b/mydata/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis-plus.version>2.1.9</mybatis-plus.version>
+        <fastjson.version>1.2.62</fastjson.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,17 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.seata/seata-core -->
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-core</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
         <dependency>
